# template-rust-app

./: Cargo.toml  Dockerfile  cargo-generate.toml  config-dev.yaml
.github/workflows/: release.yml  test.yml
src/: config.rs  error.rs  lib.rs  main.rs  telemetry.rs  webserver.rs  worterbuch.rs
