[package]
name = "{{crate_name | kebab_case}}"
version = "0.1.0"
edition = "2024"
description = "{{project_description}}"

[dependencies]
axum = "0.8.1"
clap = { version = "4.5.32", features = ["derive", "env"] }
gethostname = "1.0.0"
miette = { version = "7.5.0", features = ["fancy"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["sync", "rt", "macros", "fs"] }
tokio-graceful-shutdown = "0.16.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
worterbuch-client = "1.3.0"
