[package]
name = "{{crate_name | kebab_case}}"
version = "0.1.0"
edition = "2024"
description = "{{project_description}}"
license = "AGPL-3.0-or-later"

[dependencies]
axum = "0.8.1"
clap = { version = "4.5.32", features = ["derive", "env"] }
gethostname = "1.0.0"
miette = { version = "7.5.0", features = ["fancy"] }
opentelemetry = { version = "0.28.0", optional = true }
opentelemetry-otlp = { version = "0.28.0", optional = true, features = [
    "grpc-tonic",
] }
opentelemetry-resource-detectors = "0.7.0"
opentelemetry-semantic-conventions = { version = "0.28.0", optional = true }
opentelemetry_sdk = "0.28.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
supports-color = "3.0.2"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["sync", "rt", "macros", "fs"] }
tokio-graceful-shutdown = "0.16.0"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-opentelemetry = { version = "0.29.0", optional = true }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
worterbuch-client = "1.3.0"

[features]
default = ["tracing"]
tracing = [
    "opentelemetry",
    "opentelemetry-otlp",
    "opentelemetry-semantic-conventions",
    "tracing-opentelemetry",
]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = 0
opt-level = 3


[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "deny"
enum_glob_use = "deny"
# pedantic = "deny"
# nursery = "deny"
unwrap_used = "deny"
